Had to create a empty dev level since the thirdpersoncharacter default level broke

--- a/Reign_of_the_Abyss/Config/DefaultEngine.ini
+++ b/Reign_of_the_Abyss/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=Reign_of_the_Abyss
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Levels_Maps/ThirdPersonMap.ThirdPersonMap
-GameDefaultMap=/Game/Levels_Maps/ThirdPersonMap.ThirdPersonMap
+EditorStartupMap=/Game/Levels_Maps/Dev_Level.Dev_Level
+GameDefaultMap=/Game/Levels_Maps/Dev_Level.Dev_Level
 TransitionMap=
 bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Horizontal
