--- a/Reign_of_the_Abyss/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Reign_of_the_Abyss/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -487,16 +487,17 @@ LogVisualizerSettings="\"Object\" "
 FMODSettings="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 None=======
 None=======
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=DataTableEditor
 RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=EnumEditor
 RecentAssetEditors=UserDefinedStructureEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -507,7 +508,6 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=EnumEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=EnumEditor
 RecentAssetEditors=DataTableEditor
 RecentAssetEditors=UserDefinedStructureEditor
@@ -521,6 +521,9 @@ RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=EnumEditor
 RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=EnumEditor
+OpenAssetsAtExit=/Game/Player/BPs/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
+OpenAssetsAtExit=/Game/Health/Components/BPC_Health.BPC_Health
+OpenAssetsAtExit=/Game/Health/Interfaces/BPI_Has_Health.BPI_Has_Health
 
 [MessageLog]
 LastLogListing=BlueprintLog
@@ -871,6 +874,7 @@ TextureImportSettings.VirtualTextures=True
 TextureImportSettings.ImportSettings=True
 UMGEditorProjectSettings.Compiler=True
 UMGEditorProjectSettings.Class Filtering=True
+UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
 AndroidRuntimeSettings.APK Packaging=True
@@ -1630,13 +1634,13 @@ DataValidationSettings.Validation Scenarios=True
 GameplayDebuggerUserSettings.GameplayDebugger=True
 GameplayTagsDeveloperSettings.GameplayTags=True
 LogVisualizerSettings.VisualLogger=True
-UMGEditorProjectSettings.Designer =True
 FMODSettings.Notice=True
 FMODSettings.Basic=True
 FMODSettings.Localization=True
 FMODSettings.InitSettings=True
 FMODSettings.Advanced=True
 FMODSettings.PlatformSettings=True
+BPC_Health_C.Default=True
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -1819,6 +1823,7 @@ Struct_MeleeWeapons=UserDefinedStruct.Structure.FF5894B54DF6620AD74C339FC6BD57A6
 Struct_Weapon_Info=UserDefinedStruct.Structure.FF5894B54DF6620AD74C339FC6BD57A6,UserDefinedStruct.Structure.3492033443B8005980361DAAA80022D1,UserDefinedStruct.Structure.34BFA40D4ECB9C7C7776889E7A00FE7C,UserDefinedStruct.DefaultValues.GeneralInfo_32_E73347CC461F7538702134BFE7B28D2D,UserDefinedStruct.DefaultValues.ChargeInfo_18_6A627B1545A51F049C28D3B5D438A165,UserDefinedStruct.DefaultValues.InstantInfo_19_B2497BF64D072E1A742E9C92ABF95903,UserDefinedStruct.DefaultValues.BurstInfo_20_BD5FFF864A13AF0BB17922806435E24A,UserDefinedStruct.DefaultValues.PiercingInfo_21_85A94B8D470B45331F788281F703DAA2,UserDefinedStruct.DefaultValues.AOEInfo_22_82970EA5401F2C2A7623458E4EEA83C0,UserDefinedStruct.DefaultValues.SplitInfo_23_0BCC21C94072526C07AD3A97FA92EB03,UserDefinedStruct.DefaultValues.HomingInfo_24_1BD3D87E46905119AA5AEDAA596C6811
 Struct_Ranged_Weapons=UserDefinedStruct.Structure.FF5894B54DF6620AD74C339FC6BD57A6,UserDefinedStruct.Structure.3492033443B8005980361DAAA80022D1,UserDefinedStruct.Structure.34BFA40D4ECB9C7C7776889E7A00FE7C,UserDefinedStruct.DefaultValues.GeneralInfo_32_E73347CC461F7538702134BFE7B28D2D,UserDefinedStruct.DefaultValues.ChargeInfo_18_6A627B1545A51F049C28D3B5D438A165,UserDefinedStruct.DefaultValues.InstantInfo_19_B2497BF64D072E1A742E9C92ABF95903,UserDefinedStruct.DefaultValues.BurstInfo_20_BD5FFF864A13AF0BB17922806435E24A,UserDefinedStruct.DefaultValues.PiercingInfo_21_85A94B8D470B45331F788281F703DAA2,UserDefinedStruct.DefaultValues.AOEInfo_22_82970EA5401F2C2A7623458E4EEA83C0,UserDefinedStruct.DefaultValues.SplitInfo_23_0BCC21C94072526C07AD3A97FA92EB03,UserDefinedStruct.DefaultValues.HomingInfo_24_1BD3D87E46905119AA5AEDAA596C6811
 FMODSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,GameMapsSettings.DefaultModes.SelectedGameModeDetails
+BPC_Health_C=K2Node_BreakStruct.PinOptions.ShowPinForProperties
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -1830,36 +1835,36 @@ GameMapsSettings.DefaultModes=False
 StaticMeshActor.StaticMesh=True
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Combat/Weapons/Melee/Components/BPC_LightAttacks
-MRUItem1=/Game/Combat/Weapons/Melee/Structs_Tables/DT_MeleeWeapons
-MRUItem2=/Game/Combat/Weapons/Ranged/Structs_Tables/Struct_Ranged_Weapons
-MRUItem3=/Game/Combat/Weapons/Enums/Enum_Weapon_Names
-MRUItem4=/Game/Combat/Weapons/Struct_Tables/Struct_Weapon_Info
-MRUItem5=/Game/Combat/Interfaces/BPI_Has_Weapon
-MRUItem6=/Game/Combat/Components/BPC_AttackHandler
-MRUItem7=/Game/Combat/Weapons/BPs/BP_WeaponParent
-MRUItem8=/Game/Player/BPs/BP_ThirdPersonCharacter
-MRUItem9=/Game/Combat/Ranged/Components/BPC_Ranged_Attack
-MRUItem10=/Game/Combat/Weapons/Melee/Structs_Tables/Struct_MeleeWeapons
-MRUItem11=/Game/VFX/Spells/Base/NS_Base_Spell
-MRUItem12=/Game/Combat/Ranged/Projectiles/BPs/BP_Spell_Projectile
-MRUItem13=/Game/Health/Components/BPC_Death
-MRUItem14=/Game/Health/Structs_Tables/Struct_Health_Info
-MRUItem15=/Game/Health/Enums/Enum_Death_Types
-MRUItem16=/Game/Health/Components/BPC_Health
-MRUItem17=/Game/Combat/Ranged/Projectiles/Enums/Enum_Spell_Names
-MRUItem18=/Game/Combat/Ranged/Projectiles/Structs_Tables/DT_Non-Custom_Spells
-MRUItem19=/Game/Combat/Ranged/Projectiles/Structs_Tables/Struct_Spell
-MRUItem20=/Game/Combat/Ranged/Projectiles/Structs_Tables/Characteristics/Struct_Spell_Homing
-MRUItem21=/Game/Combat/Ranged/Projectiles/Structs_Tables/Characteristics/Struct_Spell_Split
-MRUItem22=/Game/Combat/Ranged/Projectiles/Structs_Tables/Characteristics/Struct_Spell_AOE
-MRUItem23=/Game/Combat/Ranged/Projectiles/Structs_Tables/Characteristics/Struct_Spell_Piercing
-MRUItem24=/Game/Combat/Ranged/Projectiles/Structs_Tables/Characteristics/Struct_Spell_Burst
-MRUItem25=/Game/Combat/Ranged/Projectiles/Structs_Tables/Characteristics/Struct_Spell_Instant
-MRUItem26=/Game/Combat/Ranged/Projectiles/Structs_Tables/Characteristics/Struct_Spell_Charge
-MRUItem27=/Game/Combat/Ranged/Projectiles/Enums/Spell_Shapes
-MRUItem28=/Game/Combat/Ranged/Projectiles/Structs_Tables/Struct_Spell_General_Info
-MRUItem29=/Game/Combat/Status_Effects/Enums/Enum_Status_Effects
+MRUItem0=/Game/Health/Interfaces/BPI_Has_Health
+MRUItem1=/Game/Health/Components/BPC_Health
+MRUItem2=/Game/Player/BPs/BP_ThirdPersonCharacter
+MRUItem3=/Game/Combat/Weapons/Melee/Components/BPC_LightAttacks
+MRUItem4=/Game/Combat/Weapons/Melee/Structs_Tables/DT_MeleeWeapons
+MRUItem5=/Game/Combat/Weapons/Ranged/Structs_Tables/Struct_Ranged_Weapons
+MRUItem6=/Game/Combat/Weapons/Enums/Enum_Weapon_Names
+MRUItem7=/Game/Combat/Weapons/Struct_Tables/Struct_Weapon_Info
+MRUItem8=/Game/Combat/Interfaces/BPI_Has_Weapon
+MRUItem9=/Game/Combat/Components/BPC_AttackHandler
+MRUItem10=/Game/Combat/Weapons/BPs/BP_WeaponParent
+MRUItem11=/Game/Combat/Ranged/Components/BPC_Ranged_Attack
+MRUItem12=/Game/Combat/Weapons/Melee/Structs_Tables/Struct_MeleeWeapons
+MRUItem13=/Game/VFX/Spells/Base/NS_Base_Spell
+MRUItem14=/Game/Combat/Ranged/Projectiles/BPs/BP_Spell_Projectile
+MRUItem15=/Game/Health/Components/BPC_Death
+MRUItem16=/Game/Health/Structs_Tables/Struct_Health_Info
+MRUItem17=/Game/Health/Enums/Enum_Death_Types
+MRUItem18=/Game/Combat/Ranged/Projectiles/Enums/Enum_Spell_Names
+MRUItem19=/Game/Combat/Ranged/Projectiles/Structs_Tables/DT_Non-Custom_Spells
+MRUItem20=/Game/Combat/Ranged/Projectiles/Structs_Tables/Struct_Spell
+MRUItem21=/Game/Combat/Ranged/Projectiles/Structs_Tables/Characteristics/Struct_Spell_Homing
+MRUItem22=/Game/Combat/Ranged/Projectiles/Structs_Tables/Characteristics/Struct_Spell_Split
+MRUItem23=/Game/Combat/Ranged/Projectiles/Structs_Tables/Characteristics/Struct_Spell_AOE
+MRUItem24=/Game/Combat/Ranged/Projectiles/Structs_Tables/Characteristics/Struct_Spell_Piercing
+MRUItem25=/Game/Combat/Ranged/Projectiles/Structs_Tables/Characteristics/Struct_Spell_Burst
+MRUItem26=/Game/Combat/Ranged/Projectiles/Structs_Tables/Characteristics/Struct_Spell_Instant
+MRUItem27=/Game/Combat/Ranged/Projectiles/Structs_Tables/Characteristics/Struct_Spell_Charge
+MRUItem28=/Game/Combat/Ranged/Projectiles/Enums/Spell_Shapes
+MRUItem29=/Game/Combat/Ranged/Projectiles/Structs_Tables/Struct_Spell_General_Info
 
 [PlacementMode]
 RecentlyPlaced=/Game/Co-op/Camera/BP_Camera.BP_Camera;
