--- a/Reign_of_the_Abyss/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Reign_of_the_Abyss/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -400,6 +400,7 @@ InputAction="\"Object\" "
 BPC_Footfalls_C="\"Object\" \"Object.Bones.Feet_Bones\" \"Object.Bones.Bone - Played Sound\" "
 BillboardComponent="\"Object\" "
 None=======
+None=======
 BPC_LightAttacks_C="\"Object\" "
 Blueprint="\"Object\" "
 BlueprintCore="\"Object\" "
@@ -500,39 +501,48 @@ SkinnedAsset="\"Object\" "
 LODInfoUILayout="\"Object\" "
 BoneProxy="\"Object\" "
 SkeletalMeshSocket="\"Object\" "
+Struct_Character_Info="\"Struct.Spells_12_03D6700A43242027BE70A18A6486F183\" "
+BPC_AOE_C="\"Object\" "
+BPC_Homing_C="\"Object\" "
+BPC_Split_C="\"Object\" "
+K2Node_MakeStruct="\"Object\" "
+K2Node_StructMemberSet="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 None=======
 None=======
 None=======
 None=======
 None=======
+None=======
+None=======
+None=======
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=EnumEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=UserDefinedStructureEditor
-RecentAssetEditors=UserDefinedStructureEditor
-RecentAssetEditors=StaticMeshEditor
-RecentAssetEditors=DataTableEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
@@ -546,6 +556,14 @@ OpenAssetsAtExit=/Game/Combat/Interfaces/BPI_Has_Weapon.BPI_Has_Weapon
 OpenAssetsAtExit=/Game/_UE_Content/Characters/Mannequins/Meshes/SKM_Manny.SKM_Manny
 OpenAssetsAtExit=/Game/Combat/Components/BPC_AttackHandler.BPC_AttackHandler
 OpenAssetsAtExit=/Game/Combat/Weapons/BPs/BP_WeaponParent.BP_WeaponParent
+OpenAssetsAtExit=/Game/Combat/Ranged/Projectiles/BPs/BP_Spell_Projectile.BP_Spell_Projectile
+OpenAssetsAtExit=/Game/Combat/Ranged/Projectiles/Enums/Enum_Spell_Characteristics.Enum_Spell_Characteristics
+OpenAssetsAtExit=/Game/Combat/Ranged/Projectiles/Components/BPC_AOE.BPC_AOE
+OpenAssetsAtExit=/Game/Combat/Ranged/Projectiles/Components/BPC_Homing.BPC_Homing
+OpenAssetsAtExit=/Game/Combat/Ranged/Projectiles/Components/BPC_Split.BPC_Split
+OpenAssetsAtExit=/Game/Combat/Ranged/Projectiles/Interfaces/BPI_Spell.BPI_Spell
+OpenAssetsAtExit=/Game/Combat/Ranged/Components/BPC_Ranged_Attack.BPC_Ranged_Attack
+OpenAssetsAtExit=/Game/Combat/Ranged/Projectiles/Structs_Tables/Struct_Spell_General_Info.Struct_Spell_General_Info
 
 [MessageLog]
 LastLogListing=PIE
@@ -666,6 +684,7 @@ LastLogListing=PIE
 /Game/Combat/Weapons/Melee/Enums=(R=0.066189,G=0.467784,B=0.000000,A=1.000000)
 /Game/Combat/Weapons/Struct_Tables=(R=0.467784,G=0.000000,B=0.330909,A=1.000000)
 /Game/Combat/Weapons/Enums=(R=0.066189,G=0.467784,B=0.000000,A=1.000000)
+/Game/Combat/Ranged/Projectiles/Interfaces=(R=0.358818,G=0.345576,B=0.467784,A=1.000000)
 
 [DetailCategories]
 WorldSettings.PrecomputedVisibility=True
@@ -1188,6 +1207,7 @@ K2Node_VariableSet.Variable=True
 K2Node_VariableSet.Variable=True
 K2Node_VariableSet.DefaultValueCategory=True
 K2Node_VariableSet.DefaultValueCategory=True
+None=======
 None=======
 None=======
 None=======
@@ -1800,6 +1820,25 @@ SkeletalMesh.Deformer=True
 SkeletalMesh.Rendering=True
 BPC_AttachWeapon_C.Sockets=True
 BPC_AttachWeapon_C.Events=True
+BPC_AOE_C.ComponentTick=True
+BPC_AOE_C.Tags=True
+BPC_AOE_C.ComponentReplication=True
+BPC_AOE_C.Activation=True
+BPC_AOE_C.Variable=True
+BPC_AOE_C.Cooking=True
+BPC_Homing_C.ComponentTick=True
+BPC_Homing_C.Tags=True
+BPC_Homing_C.ComponentReplication=True
+BPC_Homing_C.Activation=True
+BPC_Homing_C.Variable=True
+BPC_Homing_C.Cooking=True
+BPC_Split_C.ComponentTick=True
+BPC_Split_C.Tags=True
+BPC_Split_C.ComponentReplication=True
+BPC_Split_C.Activation=True
+BPC_Split_C.Variable=True
+BPC_Split_C.Cooking=True
+K2Node_MakeStruct.PinOptions=True
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -1959,23 +1998,23 @@ WmfMediaSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputMod
 BlendSpace=BlendSpace.Axis Settings.Horizontal Axis,BlendSpace.Axis Settings.Vertical Axis,AnimGraphNode_BlendSpaceGraph.Blend Space.None
 AnimGraphNode_BlendSpaceGraph=BlendSpace.Axis Settings.Horizontal Axis,BlendSpace.Axis Settings.Vertical Axis,AnimGraphNode_BlendSpaceGraph.Blend Space.None
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/Player/Input/Actions/IA_Jump.IA_Jump,InputMappingContext.Mappings.ActionMappings./Game/Player/Input/Actions/IA_Move.IA_Move,InputMappingContext.Mappings.ActionMappings./Game/Player/Input/Actions/IA_Look.IA_Look,InputMappingContext.Mappings.ActionMappings./Game/Player/Input/Actions/General_Combat/IA_Attack.IA_Attack,InputMappingContext.Mappings.ActionMappings./Game/Player/Input/Actions/Melee/IA_MeleeInput.IA_MeleeInput,InputMappingContext.Mappings.ActionMappings./Game/Player/Input/Actions/Ranged/IA_Next_Spell.IA_Next_Spell,InputMappingContext.Mappings.ActionMappings./Game/Player/Input/Actions/Ranged/IA_Previous_Spell.IA_Previous_Spell
-InputAction=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/Player/Input/Actions/IA_Jump.IA_Jump,InputMappingContext.Mappings.ActionMappings./Game/Player/Input/Actions/IA_Move.IA_Move,InputMappingContext.Mappings.ActionMappings./Game/Player/Input/Actions/IA_Look.IA_Look,InputMappingContext.Mappings.ActionMappings./Game/Player/Input/Actions/General_Combat/IA_Attack.IA_Attack,InputMappingContext.Mappings.ActionMappings./Game/Player/Input/Actions/Melee/IA_MeleeInput.IA_MeleeInput,InputMappingContext.Mappings.ActionMappings./Game/Player/Input/Actions/Ranged/IA_Next_Spell.IA_Next_Spell,InputMappingContext.Mappings.ActionMappings./Game/Player/Input/Actions/Ranged/IA_Previous_Spell.IA_Previous_Spell
-UserDefinedStruct=UserDefinedStruct.Structure.FF5894B54DF6620AD74C339FC6BD57A6,UserDefinedStruct.Structure.3492033443B8005980361DAAA80022D1,UserDefinedStruct.Structure.34BFA40D4ECB9C7C7776889E7A00FE7C,UserDefinedStruct.DefaultValues.GeneralInfo_32_E73347CC461F7538702134BFE7B28D2D,UserDefinedStruct.DefaultValues.ChargeInfo_18_6A627B1545A51F049C28D3B5D438A165,UserDefinedStruct.DefaultValues.InstantInfo_19_B2497BF64D072E1A742E9C92ABF95903,UserDefinedStruct.DefaultValues.BurstInfo_20_BD5FFF864A13AF0BB17922806435E24A,UserDefinedStruct.DefaultValues.PiercingInfo_21_85A94B8D470B45331F788281F703DAA2,UserDefinedStruct.DefaultValues.AOEInfo_22_82970EA5401F2C2A7623458E4EEA83C0,UserDefinedStruct.DefaultValues.SplitInfo_23_0BCC21C94072526C07AD3A97FA92EB03,UserDefinedStruct.DefaultValues.HomingInfo_24_1BD3D87E46905119AA5AEDAA596C6811
+InputAction=
+UserDefinedStruct=UserDefinedStruct.Structure.FF5894B54DF6620AD74C339FC6BD57A6,UserDefinedStruct.Structure.3492033443B8005980361DAAA80022D1,UserDefinedStruct.Structure.34BFA40D4ECB9C7C7776889E7A00FE7C,UserDefinedStruct.DefaultValues.GeneralInfo_32_E73347CC461F7538702134BFE7B28D2D,UserDefinedStruct.DefaultValues.ChargeInfo_18_6A627B1545A51F049C28D3B5D438A165,UserDefinedStruct.DefaultValues.InstantInfo_19_B2497BF64D072E1A742E9C92ABF95903,UserDefinedStruct.DefaultValues.BurstInfo_20_BD5FFF864A13AF0BB17922806435E24A,UserDefinedStruct.DefaultValues.PiercingInfo_21_85A94B8D470B45331F788281F703DAA2,UserDefinedStruct.DefaultValues.AOEInfo_22_82970EA5401F2C2A7623458E4EEA83C0,UserDefinedStruct.DefaultValues.SplitInfo_23_0BCC21C94072526C07AD3A97FA92EB03,UserDefinedStruct.DefaultValues.Spells_12_03D6700A43242027BE70A18A6486F183,UserDefinedStruct.DefaultValues.HomingInfo_24_1BD3D87E46905119AA5AEDAA596C6811,UserDefinedStruct.DefaultValues.HealthInfo_5_FE8889204233D713A8392D9FFC4FA5F5,UserDefinedStruct.DefaultValues.WeaponInfo_8_C677D2A64046D59F138511BD8C2C3485
 Struct_Spell_AOE=
 Struct_Spell_Charge=
-Struct_Spell_General_Info=
+Struct_Spell_General_Info=UserDefinedStruct.Structure.FF5894B54DF6620AD74C339FC6BD57A6,UserDefinedStruct.Structure.3492033443B8005980361DAAA80022D1,UserDefinedStruct.Structure.34BFA40D4ECB9C7C7776889E7A00FE7C,UserDefinedStruct.DefaultValues.GeneralInfo_32_E73347CC461F7538702134BFE7B28D2D,UserDefinedStruct.DefaultValues.ChargeInfo_18_6A627B1545A51F049C28D3B5D438A165,UserDefinedStruct.DefaultValues.InstantInfo_19_B2497BF64D072E1A742E9C92ABF95903,UserDefinedStruct.DefaultValues.BurstInfo_20_BD5FFF864A13AF0BB17922806435E24A,UserDefinedStruct.DefaultValues.PiercingInfo_21_85A94B8D470B45331F788281F703DAA2,UserDefinedStruct.DefaultValues.AOEInfo_22_82970EA5401F2C2A7623458E4EEA83C0,UserDefinedStruct.DefaultValues.SplitInfo_23_0BCC21C94072526C07AD3A97FA92EB03,UserDefinedStruct.DefaultValues.Spells_12_03D6700A43242027BE70A18A6486F183,UserDefinedStruct.DefaultValues.HomingInfo_24_1BD3D87E46905119AA5AEDAA596C6811,UserDefinedStruct.DefaultValues.HealthInfo_5_FE8889204233D713A8392D9FFC4FA5F5,UserDefinedStruct.DefaultValues.WeaponInfo_8_C677D2A64046D59F138511BD8C2C3485
 Struct_Spell_Instant=
 Struct_Spell_Burst=
 Struct_Spell_Piercing=
 Struct_Spell_Split=
 Struct_Spell_Homing=
 Struct_Spell=UserDefinedStruct.Structure.FF5894B54DF6620AD74C339FC6BD57A6,UserDefinedStruct.Structure.3492033443B8005980361DAAA80022D1,UserDefinedStruct.Structure.34BFA40D4ECB9C7C7776889E7A00FE7C
-K2Node_BreakStruct=K2Node_BreakStruct.PinOptions.ShowPinForProperties
+K2Node_BreakStruct=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
 Struct_Health_Info=
-BP_Spell_Projectile_C=K2Node_BreakStruct.PinOptions.ShowPinForProperties
+BP_Spell_Projectile_C=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
 K2Node_VariableGet=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
 K2Node_Variable=K2Node_BreakStruct.PinOptions.ShowPinForProperties
-ProjectileMovementComponent=K2Node_BreakStruct.PinOptions.ShowPinForProperties
+ProjectileMovementComponent=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
 K2Node_VariableSet=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
 S_MeleeWeapon=UserDefinedStruct.Structure.FF5894B54DF6620AD74C339FC6BD57A6,UserDefinedStruct.Structure.3492033443B8005980361DAAA80022D1,UserDefinedStruct.Structure.34BFA40D4ECB9C7C7776889E7A00FE7C,UserDefinedStruct.DefaultValues.GeneralInfo_32_E73347CC461F7538702134BFE7B28D2D,UserDefinedStruct.DefaultValues.ChargeInfo_18_6A627B1545A51F049C28D3B5D438A165,UserDefinedStruct.DefaultValues.InstantInfo_19_B2497BF64D072E1A742E9C92ABF95903,UserDefinedStruct.DefaultValues.BurstInfo_20_BD5FFF864A13AF0BB17922806435E24A,UserDefinedStruct.DefaultValues.PiercingInfo_21_85A94B8D470B45331F788281F703DAA2,UserDefinedStruct.DefaultValues.AOEInfo_22_82970EA5401F2C2A7623458E4EEA83C0,UserDefinedStruct.DefaultValues.SplitInfo_23_0BCC21C94072526C07AD3A97FA92EB03,UserDefinedStruct.DefaultValues.HomingInfo_24_1BD3D87E46905119AA5AEDAA596C6811
 Struct_MeleeWeapons=
@@ -1984,9 +2023,13 @@ Struct_Ranged_Weapons=UserDefinedStruct.Structure.FF5894B54DF6620AD74C339FC6BD57
 FMODSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,GameMapsSettings.DefaultModes.SelectedGameModeDetails
 BPC_Health_C=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health
 None=======
+None=======
+None=======
 Blueprint=Blueprint.Interfaces.Implemented Interfaces,K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health
 SkeletalMeshComponent=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
+SkeletalMeshComponent=Blueprint.Interfaces.Implemented Interfaces,K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health
 EdGraph=Blueprint.Interfaces.Implemented Interfaces,K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health
+EdGraph=Blueprint.Interfaces.Implemented Interfaces
 BP_TestEnemy_C=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health
 PropertyWrapper=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
 BP_ThirdPersonCharacter_C=
@@ -2002,6 +2045,10 @@ BPC_LightAttacks_C=
 EdGraphNode_Comment=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
 BPC_AttachWeapon_C=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
 K2Node_MacroInstance=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
+Struct_Enemies=
+Struct_Character_Info=
+Split=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
+Split_1=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -2013,36 +2060,36 @@ GameMapsSettings.DefaultModes=False
 StaticMeshActor.StaticMesh=True
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/_UE_Content/Characters/Mannequins/Meshes/SKM_Manny
-MRUItem1=/Game/Combat/Weapons/Components/BPC_AttachWeapon
-MRUItem2=/Game/Combat/Interfaces/BPI_Has_Weapon
-MRUItem3=/Game/Combat/Weapons/Interfaces/BPI_Melee
-MRUItem4=/Game/Combat/Weapons/BPs/BP_WeaponParent
-MRUItem5=/Game/Combat/Weapons/Melee/Components/BPC_LightAttacks
-MRUItem6=/Game/Combat/Ranged/Components/BPC_Ranged_Attack
-MRUItem7=/Game/Combat/Components/BPC_AttackHandler
-MRUItem8=/Game/Combat/Ranged/Components/BPC_Spells
-MRUItem9=/Game/Combat/Ranged/Interfaces/BPI_Has_Ranged_Attack
-MRUItem10=/Game/Player/BPs/BP_ThirdPersonCharacter
-MRUItem11=/Game/Health/Interfaces/BPI_Has_Health
-MRUItem12=/Game/Player/Input/IMCs/IMC_Default
-MRUItem13=/Game/Player/Input/Actions/Ranged/IA_Next_Spell
-MRUItem14=/Game/Player/Input/Actions/Ranged/IA_Previous_Spell
-MRUItem15=/Game/Player/Input/Actions/Melee/IA_MeleeInput
-MRUItem16=/Game/Player/Input/Actions/General_Combat/IA_Attack
-MRUItem17=/Game/Combat/Weapons/Struct_Tables/Struct_Weapon_Info
-MRUItem18=/Game/Combat/Weapons/Melee/Structs_Tables/Struct_MeleeWeapons
-MRUItem19=/Game/Assets/Static_Meshes/Combat_Anim_Pack/SM_Katana_V2
-MRUItem20=/Game/Combat/Weapons/Melee/Structs_Tables/DT_MeleeWeapons
-MRUItem21=/Game/Health/Components/BPC_Health
-MRUItem22=/Game/Enemies/BPs/BP_TestEnemy
-MRUItem23=/Game/Assets/Static_Meshes/Combat_Anim_Pack/Katana
-MRUItem24=/Game/Enemies/Interfaces/BPI_Enemy
-MRUItem25=/Game/Combat/Weapons/Ranged/Structs_Tables/Struct_Ranged_Weapons
-MRUItem26=/Game/Combat/Weapons/Enums/Enum_Weapon_Names
-MRUItem27=/Game/VFX/Spells/Base/NS_Base_Spell
-MRUItem28=/Game/Combat/Ranged/Projectiles/BPs/BP_Spell_Projectile
-MRUItem29=/Game/Health/Components/BPC_Death
+MRUItem0=/Game/Combat/Ranged/Projectiles/Structs_Tables/Struct_Spell_General_Info
+MRUItem1=/Game/Combat/Ranged/Components/BPC_Ranged_Attack
+MRUItem2=/Game/Combat/Ranged/Projectiles/Interfaces/BPI_Spell
+MRUItem3=/Game/Combat/Ranged/Projectiles/Components/BPC_Split
+MRUItem4=/Game/Combat/Ranged/Projectiles/Components/BPC_Homing
+MRUItem5=/Game/Combat/Ranged/Projectiles/Components/BPC_AOE
+MRUItem6=/Game/Combat/Ranged/Projectiles/Enums/Enum_Spell_Characteristics
+MRUItem7=/Game/Combat/Ranged/Projectiles/BPs/BP_Spell_Projectile
+MRUItem8=/Game/Combat/Weapons/BPs/BP_WeaponParent
+MRUItem9=/Game/Combat/Components/BPC_AttackHandler
+MRUItem10=/Game/_UE_Content/Characters/Mannequins/Meshes/SKM_Manny
+MRUItem11=/Game/Combat/Interfaces/BPI_Has_Weapon
+MRUItem12=/Game/Combat/Weapons/Melee/Components/BPC_LightAttacks
+MRUItem13=/Game/Player/BPs/BP_ThirdPersonCharacter
+MRUItem14=/Game/Combat/Weapons/Components/BPC_AttachWeapon
+MRUItem15=/Game/Enemies/Structs_Tables/Struct_Character_Info
+MRUItem16=/Game/Enemies/Structs_Tables/Struct_Enemies
+MRUItem17=/Game/Player/Input/IMCs/IMC_Default
+MRUItem18=/Game/Player/Input/Actions/Ranged/IA_Next_Spell
+MRUItem19=/Game/Player/Input/Actions/Ranged/IA_Previous_Spell
+MRUItem20=/Game/Player/Input/Actions/Melee/IA_MeleeInput
+MRUItem21=/Game/Player/Input/Actions/General_Combat/IA_Attack
+MRUItem22=/Game/Health/Interfaces/BPI_Has_Health
+MRUItem23=/Game/Combat/Ranged/Interfaces/BPI_Has_Ranged_Attack
+MRUItem24=/Game/Combat/Ranged/Components/BPC_Spells
+MRUItem25=/Game/Combat/Weapons/Struct_Tables/Struct_Weapon_Info
+MRUItem26=/Game/Combat/Weapons/Melee/Structs_Tables/Struct_MeleeWeapons
+MRUItem27=/Game/Assets/Static_Meshes/Combat_Anim_Pack/SM_Katana_V2
+MRUItem28=/Game/Combat/Weapons/Melee/Structs_Tables/DT_MeleeWeapons
+MRUItem29=/Game/Health/Components/BPC_Health
 
 [PlacementMode]
 RecentlyPlaced=/Game/VFX/Bloodsplosion/BPs/BP_BloodSplosion.BP_BloodSplosion;
@@ -2064,6 +2111,7 @@ RecentlyPlaced=/Game/BP_Camera.BP_Camera;
 /Game/Player/Input/IMCs/IMC_Default.IMC_Default=0
 /Game/VFX/Bloodsplosion/BPs/BP_BloodSplosion.BP_BloodSplosion=1
 /Game/VFX/Blood_Splatter/BPS/BP_Blood_Drops.BP_Blood_Drops=1
+None=======
 None=======
 /Game/Weapons/Melee/Components/BPC_LightAttacks.BPC_LightAttacks=1
 /Game/Weapons/Melee/BPs/BP_WeaponParent.BP_WeaponParent=1
@@ -2128,6 +2176,8 @@ None=======
 /Game/Combat/Weapons/Interfaces/BPI_Melee.BPI_Melee=0
 /Game/Combat/Weapons/Components/BPC_AttachWeapon.BPC_AttachWeapon=0
 /Game/_UE_Content/Characters/Mannequins/Meshes/SKM_Manny.SKM_Manny=0
+/Game/Enemies/Structs_Tables/Struct_Enemies.Struct_Enemies=0
+/Game/Enemies/Structs_Tables/Struct_Character_Info.Struct_Character_Info=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
