Fixed weapon collision on attaching to character. Gave static mesh to weapon placeholder in data table. Changed set weapon info in BPI_Melee to use weapon names enum.
Set actor enable collision false after attaching the weapon to the character in the attach weapon component.

Set katana mesh as the static mesh for the placeholder weapon in the melee weapon data table.

BPI_Melee set weapon info now uses the enum weapon names instead of a name to limit errors with case sensitivity.
Weapon parent now has its name as a enum of weapon names instead of a name to limit errors with case sensitivitiy.
This enum is now also instance editable and editable on spawn so can change it when spawning the weapon in attach weapon component.

--- a/Reign_of_the_Abyss/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Reign_of_the_Abyss/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -96,7 +96,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1280,Y=720)
+LastSize=(X=0,Y=0)
 LastExecutedLaunchDevice=Windows@WINDOWS-LKPMU37
 LastExecutedLaunchName=WINDOWS-LKPMU37
 LastExecutedPIEPreviewDevice=
@@ -519,6 +519,11 @@ None=======
 None=======
 None=======
 None=======
+RecentAssetEditors=EnumEditor
+RecentAssetEditors=UserDefinedStructureEditor
+RecentAssetEditors=DataTableEditor
+RecentAssetEditors=UserDefinedStructureEditor
+RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -533,11 +538,6 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=UserDefinedStructureEditor
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
@@ -553,7 +553,7 @@ OpenAssetsAtExit=/Game/Combat/Weapons/Components/BPC_AttachWeapon.BPC_AttachWeap
 OpenAssetsAtExit=/Game/Player/BPs/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 OpenAssetsAtExit=/Game/Combat/Weapons/Melee/Components/BPC_LightAttacks.BPC_LightAttacks
 OpenAssetsAtExit=/Game/Combat/Interfaces/BPI_Has_Weapon.BPI_Has_Weapon
-OpenAssetsAtExit=/Game/_UE_Content/Characters/Mannequins/Meshes/SKM_Manny.SKM_Manny
+OpenAssetsAtExit=/Game/Combat/Weapons/Melee/Structs_Tables/Struct_MeleeWeapons.Struct_MeleeWeapons
 OpenAssetsAtExit=/Game/Combat/Components/BPC_AttackHandler.BPC_AttackHandler
 OpenAssetsAtExit=/Game/Combat/Weapons/BPs/BP_WeaponParent.BP_WeaponParent
 OpenAssetsAtExit=/Game/Combat/Ranged/Projectiles/BPs/BP_Spell_Projectile.BP_Spell_Projectile
@@ -564,6 +564,10 @@ OpenAssetsAtExit=/Game/Combat/Ranged/Projectiles/Components/BPC_Split.BPC_Split
 OpenAssetsAtExit=/Game/Combat/Ranged/Projectiles/Interfaces/BPI_Spell.BPI_Spell
 OpenAssetsAtExit=/Game/Combat/Ranged/Components/BPC_Ranged_Attack.BPC_Ranged_Attack
 OpenAssetsAtExit=/Game/Combat/Ranged/Projectiles/Structs_Tables/Struct_Spell_General_Info.Struct_Spell_General_Info
+OpenAssetsAtExit=/Game/Combat/Weapons/Struct_Tables/Struct_Weapon_Info.Struct_Weapon_Info
+OpenAssetsAtExit=/Game/Combat/Weapons/Melee/Structs_Tables/DT_MeleeWeapons.DT_MeleeWeapons
+OpenAssetsAtExit=/Game/Combat/Weapons/Enums/Enum_Weapon_Names.Enum_Weapon_Names
+OpenAssetsAtExit=/Game/Combat/Weapons/Interfaces/BPI_Melee.BPI_Melee
 
 [MessageLog]
 LastLogListing=PIE
@@ -1415,7 +1419,7 @@ BP_WeaponParent_C.Default=True
 K2Node_FunctionResult.Graph=True
 K2Node_FunctionResult.Inputs=True
 K2Node_FunctionResult.Outputs=True
-Struct_MeleeWeapons.None=False
+Struct_MeleeWeapons.None=True
 StaticMeshActor.TransformCommon=True
 StaticMeshActor.StaticMesh=True
 StaticMeshActor.Physics=True
@@ -1839,6 +1843,8 @@ BPC_Split_C.Activation=True
 BPC_Split_C.Variable=True
 BPC_Split_C.Cooking=True
 K2Node_MakeStruct.PinOptions=True
+BP_WeaponParent_C.TransformCommon=True
+BP_WeaponParent_C.Networking=True
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -2017,22 +2023,22 @@ K2Node_Variable=K2Node_BreakStruct.PinOptions.ShowPinForProperties
 ProjectileMovementComponent=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
 K2Node_VariableSet=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
 S_MeleeWeapon=UserDefinedStruct.Structure.FF5894B54DF6620AD74C339FC6BD57A6,UserDefinedStruct.Structure.3492033443B8005980361DAAA80022D1,UserDefinedStruct.Structure.34BFA40D4ECB9C7C7776889E7A00FE7C,UserDefinedStruct.DefaultValues.GeneralInfo_32_E73347CC461F7538702134BFE7B28D2D,UserDefinedStruct.DefaultValues.ChargeInfo_18_6A627B1545A51F049C28D3B5D438A165,UserDefinedStruct.DefaultValues.InstantInfo_19_B2497BF64D072E1A742E9C92ABF95903,UserDefinedStruct.DefaultValues.BurstInfo_20_BD5FFF864A13AF0BB17922806435E24A,UserDefinedStruct.DefaultValues.PiercingInfo_21_85A94B8D470B45331F788281F703DAA2,UserDefinedStruct.DefaultValues.AOEInfo_22_82970EA5401F2C2A7623458E4EEA83C0,UserDefinedStruct.DefaultValues.SplitInfo_23_0BCC21C94072526C07AD3A97FA92EB03,UserDefinedStruct.DefaultValues.HomingInfo_24_1BD3D87E46905119AA5AEDAA596C6811
-Struct_MeleeWeapons=
-Struct_Weapon_Info=
+Struct_MeleeWeapons=UserDefinedStruct.Structure.FF5894B54DF6620AD74C339FC6BD57A6,UserDefinedStruct.Structure.3492033443B8005980361DAAA80022D1,UserDefinedStruct.Structure.34BFA40D4ECB9C7C7776889E7A00FE7C,UserDefinedStruct.DefaultValues.GeneralInfo_32_E73347CC461F7538702134BFE7B28D2D,UserDefinedStruct.DefaultValues.ChargeInfo_18_6A627B1545A51F049C28D3B5D438A165,UserDefinedStruct.DefaultValues.InstantInfo_19_B2497BF64D072E1A742E9C92ABF95903,UserDefinedStruct.DefaultValues.BurstInfo_20_BD5FFF864A13AF0BB17922806435E24A,UserDefinedStruct.DefaultValues.PiercingInfo_21_85A94B8D470B45331F788281F703DAA2,UserDefinedStruct.DefaultValues.AOEInfo_22_82970EA5401F2C2A7623458E4EEA83C0,UserDefinedStruct.DefaultValues.SplitInfo_23_0BCC21C94072526C07AD3A97FA92EB03,UserDefinedStruct.DefaultValues.Spells_12_03D6700A43242027BE70A18A6486F183,UserDefinedStruct.DefaultValues.HomingInfo_24_1BD3D87E46905119AA5AEDAA596C6811,UserDefinedStruct.DefaultValues.HealthInfo_5_FE8889204233D713A8392D9FFC4FA5F5,UserDefinedStruct.DefaultValues.WeaponInfo_8_C677D2A64046D59F138511BD8C2C3485
+Struct_Weapon_Info=UserDefinedStruct.Structure.FF5894B54DF6620AD74C339FC6BD57A6,UserDefinedStruct.Structure.3492033443B8005980361DAAA80022D1,UserDefinedStruct.Structure.34BFA40D4ECB9C7C7776889E7A00FE7C,UserDefinedStruct.DefaultValues.GeneralInfo_32_E73347CC461F7538702134BFE7B28D2D,UserDefinedStruct.DefaultValues.ChargeInfo_18_6A627B1545A51F049C28D3B5D438A165,UserDefinedStruct.DefaultValues.InstantInfo_19_B2497BF64D072E1A742E9C92ABF95903,UserDefinedStruct.DefaultValues.BurstInfo_20_BD5FFF864A13AF0BB17922806435E24A,UserDefinedStruct.DefaultValues.PiercingInfo_21_85A94B8D470B45331F788281F703DAA2,UserDefinedStruct.DefaultValues.AOEInfo_22_82970EA5401F2C2A7623458E4EEA83C0,UserDefinedStruct.DefaultValues.SplitInfo_23_0BCC21C94072526C07AD3A97FA92EB03,UserDefinedStruct.DefaultValues.Spells_12_03D6700A43242027BE70A18A6486F183,UserDefinedStruct.DefaultValues.HomingInfo_24_1BD3D87E46905119AA5AEDAA596C6811,UserDefinedStruct.DefaultValues.HealthInfo_5_FE8889204233D713A8392D9FFC4FA5F5,UserDefinedStruct.DefaultValues.WeaponInfo_8_C677D2A64046D59F138511BD8C2C3485
 Struct_Ranged_Weapons=UserDefinedStruct.Structure.FF5894B54DF6620AD74C339FC6BD57A6,UserDefinedStruct.Structure.3492033443B8005980361DAAA80022D1,UserDefinedStruct.Structure.34BFA40D4ECB9C7C7776889E7A00FE7C,UserDefinedStruct.DefaultValues.GeneralInfo_32_E73347CC461F7538702134BFE7B28D2D,UserDefinedStruct.DefaultValues.ChargeInfo_18_6A627B1545A51F049C28D3B5D438A165,UserDefinedStruct.DefaultValues.InstantInfo_19_B2497BF64D072E1A742E9C92ABF95903,UserDefinedStruct.DefaultValues.BurstInfo_20_BD5FFF864A13AF0BB17922806435E24A,UserDefinedStruct.DefaultValues.PiercingInfo_21_85A94B8D470B45331F788281F703DAA2,UserDefinedStruct.DefaultValues.AOEInfo_22_82970EA5401F2C2A7623458E4EEA83C0,UserDefinedStruct.DefaultValues.SplitInfo_23_0BCC21C94072526C07AD3A97FA92EB03,UserDefinedStruct.DefaultValues.HomingInfo_24_1BD3D87E46905119AA5AEDAA596C6811
 FMODSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,GameMapsSettings.DefaultModes.SelectedGameModeDetails
 BPC_Health_C=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health
 None=======
 None=======
 None=======
-Blueprint=Blueprint.Interfaces.Implemented Interfaces,K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health
+Blueprint=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces
 SkeletalMeshComponent=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
-SkeletalMeshComponent=Blueprint.Interfaces.Implemented Interfaces,K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health
+SkeletalMeshComponent=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
 EdGraph=Blueprint.Interfaces.Implemented Interfaces,K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health
 EdGraph=Blueprint.Interfaces.Implemented Interfaces
 BP_TestEnemy_C=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health
 PropertyWrapper=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
-BP_ThirdPersonCharacter_C=
+BP_ThirdPersonCharacter_C=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
 K2Node_FunctionEntry=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health
 BP_WeaponParent_C=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
 K2Node_CustomEvent=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health
@@ -2040,7 +2046,7 @@ BPC_AttackHandler_C=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyW
 BPC_Spells_C=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
 BPC_Ranged_Attack_C=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
 K2Node=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
-K2Node_CallFunction=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
+K2Node_CallFunction=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces
 BPC_LightAttacks_C=
 EdGraphNode_Comment=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
 BPC_AttachWeapon_C=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
@@ -2049,6 +2055,8 @@ Struct_Enemies=
 Struct_Character_Info=
 Split=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
 Split_1=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
+SceneComponent=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
+StaticMeshComponent=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -2060,36 +2068,36 @@ GameMapsSettings.DefaultModes=False
 StaticMeshActor.StaticMesh=True
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Combat/Ranged/Projectiles/Structs_Tables/Struct_Spell_General_Info
-MRUItem1=/Game/Combat/Ranged/Components/BPC_Ranged_Attack
-MRUItem2=/Game/Combat/Ranged/Projectiles/Interfaces/BPI_Spell
-MRUItem3=/Game/Combat/Ranged/Projectiles/Components/BPC_Split
-MRUItem4=/Game/Combat/Ranged/Projectiles/Components/BPC_Homing
-MRUItem5=/Game/Combat/Ranged/Projectiles/Components/BPC_AOE
-MRUItem6=/Game/Combat/Ranged/Projectiles/Enums/Enum_Spell_Characteristics
-MRUItem7=/Game/Combat/Ranged/Projectiles/BPs/BP_Spell_Projectile
-MRUItem8=/Game/Combat/Weapons/BPs/BP_WeaponParent
-MRUItem9=/Game/Combat/Components/BPC_AttackHandler
-MRUItem10=/Game/_UE_Content/Characters/Mannequins/Meshes/SKM_Manny
-MRUItem11=/Game/Combat/Interfaces/BPI_Has_Weapon
-MRUItem12=/Game/Combat/Weapons/Melee/Components/BPC_LightAttacks
-MRUItem13=/Game/Player/BPs/BP_ThirdPersonCharacter
-MRUItem14=/Game/Combat/Weapons/Components/BPC_AttachWeapon
-MRUItem15=/Game/Enemies/Structs_Tables/Struct_Character_Info
-MRUItem16=/Game/Enemies/Structs_Tables/Struct_Enemies
-MRUItem17=/Game/Player/Input/IMCs/IMC_Default
-MRUItem18=/Game/Player/Input/Actions/Ranged/IA_Next_Spell
-MRUItem19=/Game/Player/Input/Actions/Ranged/IA_Previous_Spell
-MRUItem20=/Game/Player/Input/Actions/Melee/IA_MeleeInput
-MRUItem21=/Game/Player/Input/Actions/General_Combat/IA_Attack
-MRUItem22=/Game/Health/Interfaces/BPI_Has_Health
-MRUItem23=/Game/Combat/Ranged/Interfaces/BPI_Has_Ranged_Attack
-MRUItem24=/Game/Combat/Ranged/Components/BPC_Spells
-MRUItem25=/Game/Combat/Weapons/Struct_Tables/Struct_Weapon_Info
-MRUItem26=/Game/Combat/Weapons/Melee/Structs_Tables/Struct_MeleeWeapons
-MRUItem27=/Game/Assets/Static_Meshes/Combat_Anim_Pack/SM_Katana_V2
-MRUItem28=/Game/Combat/Weapons/Melee/Structs_Tables/DT_MeleeWeapons
-MRUItem29=/Game/Health/Components/BPC_Health
+MRUItem0=/Game/Combat/Weapons/Interfaces/BPI_Melee
+MRUItem1=/Game/Combat/Weapons/Enums/Enum_Weapon_Names
+MRUItem2=/Game/Combat/Weapons/Melee/Structs_Tables/Struct_MeleeWeapons
+MRUItem3=/Game/Combat/Weapons/Melee/Structs_Tables/DT_MeleeWeapons
+MRUItem4=/Game/Combat/Weapons/Struct_Tables/Struct_Weapon_Info
+MRUItem5=/Game/Combat/Ranged/Projectiles/Structs_Tables/Struct_Spell_General_Info
+MRUItem6=/Game/Combat/Ranged/Components/BPC_Ranged_Attack
+MRUItem7=/Game/Combat/Ranged/Projectiles/Interfaces/BPI_Spell
+MRUItem8=/Game/Combat/Ranged/Projectiles/Components/BPC_Split
+MRUItem9=/Game/Combat/Ranged/Projectiles/Components/BPC_Homing
+MRUItem10=/Game/Combat/Ranged/Projectiles/Components/BPC_AOE
+MRUItem11=/Game/Combat/Ranged/Projectiles/Enums/Enum_Spell_Characteristics
+MRUItem12=/Game/Combat/Ranged/Projectiles/BPs/BP_Spell_Projectile
+MRUItem13=/Game/Combat/Weapons/BPs/BP_WeaponParent
+MRUItem14=/Game/Combat/Components/BPC_AttackHandler
+MRUItem15=/Game/_UE_Content/Characters/Mannequins/Meshes/SKM_Manny
+MRUItem16=/Game/Combat/Interfaces/BPI_Has_Weapon
+MRUItem17=/Game/Combat/Weapons/Melee/Components/BPC_LightAttacks
+MRUItem18=/Game/Player/BPs/BP_ThirdPersonCharacter
+MRUItem19=/Game/Combat/Weapons/Components/BPC_AttachWeapon
+MRUItem20=/Game/Enemies/Structs_Tables/Struct_Character_Info
+MRUItem21=/Game/Enemies/Structs_Tables/Struct_Enemies
+MRUItem22=/Game/Player/Input/IMCs/IMC_Default
+MRUItem23=/Game/Player/Input/Actions/Ranged/IA_Next_Spell
+MRUItem24=/Game/Player/Input/Actions/Ranged/IA_Previous_Spell
+MRUItem25=/Game/Player/Input/Actions/Melee/IA_MeleeInput
+MRUItem26=/Game/Player/Input/Actions/General_Combat/IA_Attack
+MRUItem27=/Game/Health/Interfaces/BPI_Has_Health
+MRUItem28=/Game/Combat/Ranged/Interfaces/BPI_Has_Ranged_Attack
+MRUItem29=/Game/Combat/Ranged/Components/BPC_Spells
 
 [PlacementMode]
 RecentlyPlaced=/Game/VFX/Bloodsplosion/BPs/BP_BloodSplosion.BP_BloodSplosion;
