--- a/Reign_of_the_Abyss/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Reign_of_the_Abyss/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -516,6 +516,11 @@ AnimGraphNode_SaveCachedPose="\"Object\" "
 AnimGraphNode_UseCachedPose="\"Object\" "
 AnimPreviewInstance="\"Object\" "
 AnimSingleNodeInstance="\"Object\" "
+AnimGraphNode_TransitionResult="\"Object\" "
+AnimStateTransitionNode="\"Object\" "
+AnimGraphNode_BlendListByBool="\"Object\" "
+AnimGraphNode_BlendListBase="\"Object\" "
+AnimGraphNode_LayeredBoneBlend="\"Object\" \"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -528,6 +533,8 @@ None=======
 None=======
 None=======
 None=======
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=DataTableEditor
@@ -540,9 +547,7 @@ RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=EnumEditor
 RecentAssetEditors=EnumEditor
 RecentAssetEditors=EnumEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=DataTableEditor
 RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=BlueprintEditor
@@ -559,6 +564,8 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=
 OpenAssetsAtExit=/Game/Combat/Weapons/Struct_Tables/DT_Weapon_Info.DT_Weapon_Info
+OpenAssetsAtExit=/Game/Combat/Weapons/Interfaces/BPI_Melee.BPI_Melee
+OpenAssetsAtExit=/Game/Combat/Weapons/BPs/BP_WeaponParent.BP_WeaponParent
 OpenAssetsAtExit=/Game/Assets/Static_Meshes/Ranged/Staff.Staff
 OpenAssetsAtExit=/Game/Assets/Animations/ABPs/ABP_Player.ABP_Player
 OpenAssetsAtExit=/Game/Combat/Weapons/Components/BPC_AttachWeapon.BPC_AttachWeapon
@@ -1864,6 +1871,24 @@ AnimGraphNode_UseCachedPose.Tag=True
 AnimPreviewInstance.RootMotion=True
 AnimPreviewInstance.Notifies=True
 AnimPreviewInstance.Montage=True
+AnimGraphNode_TransitionResult.Result=True
+AnimGraphNode_TransitionResult.Functions=True
+AnimGraphNode_TransitionResult.Tag=True
+AnimStateTransitionNode.Transition=True
+AnimStateTransitionNode.BlendSettings=True
+AnimStateTransitionNode.Events=True
+AnimStateTransitionNode.Notifications=True
+AnimGraphNode_BlendListByBool.Runtime=True
+AnimGraphNode_BlendListByBool.Functions=True
+AnimGraphNode_BlendListByBool.Config=True
+AnimGraphNode_BlendListByBool.Tag=True
+AnimGraphNode_BlendListByBool.BlendType=True
+AnimGraphNode_BlendListByBool.Option=True
+AnimGraphNode_LayeredBoneBlend.Config=True
+AnimGraphNode_LayeredBoneBlend.Functions=True
+AnimGraphNode_LayeredBoneBlend.Runtime=True
+AnimGraphNode_LayeredBoneBlend.Tag=True
+AnimGraphNode_LayeredBoneBlend.Performance=True
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -2066,7 +2091,7 @@ BPC_Spells_C=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.
 BPC_Ranged_Attack_C=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
 K2Node=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
 K2Node_CallFunction=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces
-BPC_LightAttacks_C=
+BPC_LightAttacks_C=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
 EdGraphNode_Comment=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
 BPC_AttachWeapon_C=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
 K2Node_MacroInstance=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
@@ -2082,6 +2107,7 @@ StaticMesh=StaticMesh.LOD0.MeshBuildSettings
 MeshNaniteSettings=StaticMesh.LOD0.MeshBuildSettings
 ABP_Player_C=
 AnimStateConduitNode=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
+AnimGraphNode_BlendListByBool=K2Node_BreakStruct.PinOptions.ShowPinForProperties,PropertyWrapper.DefaultValueCategory.Health,Blueprint.Interfaces.Implemented Interfaces
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -2093,36 +2119,36 @@ GameMapsSettings.DefaultModes=False
 StaticMeshActor.StaticMesh=True
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Assets/Animations/ABPs/ABP_Player
-MRUItem1=/Game/Assets/Static_Meshes/Ranged/Staff
-MRUItem2=/Game/Combat/Weapons/Struct_Tables/DT_Weapon_Info
-MRUItem3=/Game/Combat/Weapons/Components/BPC_AttachWeapon
-MRUItem4=/Game/Player/BPs/BP_ThirdPersonCharacter
-MRUItem5=/Game/Combat/Weapons/Melee/Structs_Tables/Struct_MeleeWeapons
-MRUItem6=/Game/Combat/Weapons/Struct_Tables/Struct_Weapon_Info
-MRUItem7=/Game/Combat/Weapons/Ranged/Structs_Tables/DT_Ranged_Weapons
-MRUItem8=/Game/Combat/Weapons/Ranged/Structs_Tables/Struct_Ranged_Weapons
-MRUItem9=/Game/Combat/Weapons/Melee/Enums/Enum_Melee_Weapon_Names
-MRUItem10=/Game/Combat/Weapons/Enums/Enum_Weapon_Names
-MRUItem11=/Game/Combat/Weapons/Ranged/Enums/Enum_Ranged_Weapon_Names
-MRUItem12=/Game/Combat/Weapons/BPs/BP_WeaponParent
-MRUItem13=/Game/Assets/Animations/Assets/Combat_Animations/DynamicKatanaAnimsV2/IP/Attack/Anim_DK2_Combo_A2_IP
-MRUItem14=/Game/Combat/Weapons/Interfaces/BPI_Melee
-MRUItem15=/Game/Combat/Weapons/Melee/Structs_Tables/DT_MeleeWeapons
-MRUItem16=/Game/Combat/Ranged/Projectiles/Structs_Tables/Struct_Spell_General_Info
-MRUItem17=/Game/Combat/Ranged/Components/BPC_Ranged_Attack
-MRUItem18=/Game/Combat/Ranged/Projectiles/Interfaces/BPI_Spell
-MRUItem19=/Game/Combat/Ranged/Projectiles/Components/BPC_Split
-MRUItem20=/Game/Combat/Ranged/Projectiles/Components/BPC_Homing
-MRUItem21=/Game/Combat/Ranged/Projectiles/Components/BPC_AOE
-MRUItem22=/Game/Combat/Ranged/Projectiles/Enums/Enum_Spell_Characteristics
-MRUItem23=/Game/Combat/Ranged/Projectiles/BPs/BP_Spell_Projectile
-MRUItem24=/Game/Combat/Components/BPC_AttackHandler
-MRUItem25=/Game/_UE_Content/Characters/Mannequins/Meshes/SKM_Manny
-MRUItem26=/Game/Combat/Interfaces/BPI_Has_Weapon
-MRUItem27=/Game/Combat/Weapons/Melee/Components/BPC_LightAttacks
-MRUItem28=/Game/Enemies/Structs_Tables/Struct_Character_Info
-MRUItem29=/Game/Enemies/Structs_Tables/Struct_Enemies
+MRUItem0=/Game/Combat/Weapons/Interfaces/BPI_Weapon
+MRUItem1=/Game/Combat/Weapons/Interfaces/BPI_Melee
+MRUItem2=/Game/Combat/Weapons/BPs/BP_WeaponParent
+MRUItem3=/Game/Assets/Animations/ABPs/ABP_Player
+MRUItem4=/Game/Assets/Static_Meshes/Ranged/Staff
+MRUItem5=/Game/Combat/Weapons/Struct_Tables/DT_Weapon_Info
+MRUItem6=/Game/Combat/Weapons/Components/BPC_AttachWeapon
+MRUItem7=/Game/Player/BPs/BP_ThirdPersonCharacter
+MRUItem8=/Game/Combat/Weapons/Melee/Structs_Tables/Struct_MeleeWeapons
+MRUItem9=/Game/Combat/Weapons/Struct_Tables/Struct_Weapon_Info
+MRUItem10=/Game/Combat/Weapons/Ranged/Structs_Tables/DT_Ranged_Weapons
+MRUItem11=/Game/Combat/Weapons/Ranged/Structs_Tables/Struct_Ranged_Weapons
+MRUItem12=/Game/Combat/Weapons/Melee/Enums/Enum_Melee_Weapon_Names
+MRUItem13=/Game/Combat/Weapons/Enums/Enum_Weapon_Names
+MRUItem14=/Game/Combat/Weapons/Ranged/Enums/Enum_Ranged_Weapon_Names
+MRUItem15=/Game/Assets/Animations/Assets/Combat_Animations/DynamicKatanaAnimsV2/IP/Attack/Anim_DK2_Combo_A2_IP
+MRUItem16=/Game/Combat/Weapons/Melee/Structs_Tables/DT_MeleeWeapons
+MRUItem17=/Game/Combat/Ranged/Projectiles/Structs_Tables/Struct_Spell_General_Info
+MRUItem18=/Game/Combat/Ranged/Components/BPC_Ranged_Attack
+MRUItem19=/Game/Combat/Ranged/Projectiles/Interfaces/BPI_Spell
+MRUItem20=/Game/Combat/Ranged/Projectiles/Components/BPC_Split
+MRUItem21=/Game/Combat/Ranged/Projectiles/Components/BPC_Homing
+MRUItem22=/Game/Combat/Ranged/Projectiles/Components/BPC_AOE
+MRUItem23=/Game/Combat/Ranged/Projectiles/Enums/Enum_Spell_Characteristics
+MRUItem24=/Game/Combat/Ranged/Projectiles/BPs/BP_Spell_Projectile
+MRUItem25=/Game/Combat/Components/BPC_AttackHandler
+MRUItem26=/Game/_UE_Content/Characters/Mannequins/Meshes/SKM_Manny
+MRUItem27=/Game/Combat/Interfaces/BPI_Has_Weapon
+MRUItem28=/Game/Combat/Weapons/Melee/Components/BPC_LightAttacks
+MRUItem29=/Game/Enemies/Structs_Tables/Struct_Character_Info
 
 [PlacementMode]
 RecentlyPlaced=/Game/Assets/Static_Meshes/Ranged/Staff.Staff;
