Spell Slow down bool and float for time and slow down start time.
Made a black hole spell. - aoe, charge, slow down.

Spells now have a bool in the general info for spells whether they should slow down and then 2 float variables: one for when the slow down should start and then also how long the slow down should take to reach 0 from the current max speed.
This is done in a similar way to the speed up of the spells.

--- a/Reign_of_the_Abyss/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Reign_of_the_Abyss/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -176,7 +176,7 @@ ContentBrowserTab2.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab2.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab2.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab2.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab2.SelectedPaths=/Game
+ContentBrowserTab2.SelectedPaths=/Game/Combat/Ranged/Projectiles/Structs_Tables
 ContentBrowserTab2.PluginFilters=
 ContentBrowserTab2.Favorites.SelectedPaths=
 ContentBrowserTab2.SelectedCollections=
@@ -595,13 +595,14 @@ None=======
 None=======
 None=======
 None=======
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=DataTableEditor
+RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=DataTableEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=DataTableEditor
@@ -624,8 +625,9 @@ RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=EnumEditor
 RecentAssetEditors=BlueprintEditor
-OpenAssetsAtExit=/Game/UI/HUD/Widgets/WBP_HUD.WBP_HUD
-OpenAssetsAtExit=/Game/UI/HUD/Widgets/WBP_HealthBar.WBP_HealthBar
+OpenAssetsAtExit=/Game/Combat/Ranged/Projectiles/BPs/BP_Spell_Projectile.BP_Spell_Projectile
+OpenAssetsAtExit=/Game/Combat/Ranged/Projectiles/Structs_Tables/Struct_Spell_General_Info.Struct_Spell_General_Info
+OpenAssetsAtExit=/Game/Combat/Ranged/Projectiles/Structs_Tables/DT_Non-Custom_Spells.DT_Non-Custom_Spells
 
 [MessageLog]
 LastLogListing=PIE
@@ -2497,7 +2499,7 @@ None=======
 K2Node_Variable=K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.General Info,K2Node_VariableGet.DefaultValueCategory.Spell Info,K2Node_VariableSet.DefaultValueCategory.General Info,PropertyWrapper.DefaultValueCategory.Health,PropertyWrapper.DefaultValueCategory.Spell Info,PropertyWrapper.DefaultValueCategory.General Info,Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces
 K2Node_Variable=K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.Spell Info,K2Node_VariableGet.DefaultValueCategory.General Info,K2Node_VariableGet.DefaultValueCategory.Health,K2Node_VariableGet.DefaultValueCategory.Character Info,K2Node_VariableSet.DefaultValueCategory.General Info,K2Node_VariableSet.DefaultValueCategory.Character Info,PropertyWrapper.DefaultValueCategory.Health,PropertyWrapper.DefaultValueCategory.Health Info,PropertyWrapper.DefaultValueCategory.Spell Info,PropertyWrapper.DefaultValueCategory.General Info,PropertyWrapper.DefaultValueCategory.Character Info,Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,AimOffsetBlendSpace1D.Axis Settings.Horizontal Axis,AnimGraphNode_RotationOffsetBlendSpaceGraph.Blend Space.None,StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision
 ProjectileMovementComponent=K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.General Info,K2Node_VariableGet.DefaultValueCategory.Spell Info,K2Node_VariableSet.DefaultValueCategory.General Info,PropertyWrapper.DefaultValueCategory.Health,PropertyWrapper.DefaultValueCategory.Spell Info,PropertyWrapper.DefaultValueCategory.General Info,Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces
-ProjectileMovementComponent=K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.Spell Info,K2Node_VariableGet.DefaultValueCategory.General Info,K2Node_VariableGet.DefaultValueCategory.Health,K2Node_VariableGet.DefaultValueCategory.Character Info,K2Node_VariableSet.DefaultValueCategory.General Info,K2Node_VariableSet.DefaultValueCategory.Character Info,PropertyWrapper.DefaultValueCategory.Health,PropertyWrapper.DefaultValueCategory.Health Info,PropertyWrapper.DefaultValueCategory.Spell Info,PropertyWrapper.DefaultValueCategory.General Info,PropertyWrapper.DefaultValueCategory.Character Info,Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,AimOffsetBlendSpace1D.Axis Settings.Horizontal Axis,AnimGraphNode_RotationOffsetBlendSpaceGraph.Blend Space.None,StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision
+ProjectileMovementComponent=
 K2Node_VariableSet=K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_VariableGet.DefaultValueCategory.General Info,K2Node_VariableGet.DefaultValueCategory.Spell Info,K2Node_VariableGet.DefaultValueCategory.Health,K2Node_VariableGet.DefaultValueCategory.Character Info,K2Node_VariableSet.DefaultValueCategory.General Info,K2Node_VariableSet.DefaultValueCategory.Character Info,PropertyWrapper.DefaultValueCategory.Health,PropertyWrapper.DefaultValueCategory.Health Info,PropertyWrapper.DefaultValueCategory.Spell Info,PropertyWrapper.DefaultValueCategory.General Info,PropertyWrapper.DefaultValueCategory.Character Info,Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,AimOffsetBlendSpace1D.Axis Settings.Horizontal Axis,AnimGraphNode_RotationOffsetBlendSpaceGraph.Blend Space.None,StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision
 S_MeleeWeapon=UserDefinedStruct.Structure.FF5894B54DF6620AD74C339FC6BD57A6,UserDefinedStruct.Structure.3492033443B8005980361DAAA80022D1,UserDefinedStruct.Structure.34BFA40D4ECB9C7C7776889E7A00FE7C,UserDefinedStruct.DefaultValues.GeneralInfo_32_E73347CC461F7538702134BFE7B28D2D,UserDefinedStruct.DefaultValues.ChargeInfo_18_6A627B1545A51F049C28D3B5D438A165,UserDefinedStruct.DefaultValues.InstantInfo_19_B2497BF64D072E1A742E9C92ABF95903,UserDefinedStruct.DefaultValues.BurstInfo_20_BD5FFF864A13AF0BB17922806435E24A,UserDefinedStruct.DefaultValues.PiercingInfo_21_85A94B8D470B45331F788281F703DAA2,UserDefinedStruct.DefaultValues.AOEInfo_22_82970EA5401F2C2A7623458E4EEA83C0,UserDefinedStruct.DefaultValues.SplitInfo_23_0BCC21C94072526C07AD3A97FA92EB03,UserDefinedStruct.DefaultValues.HomingInfo_24_1BD3D87E46905119AA5AEDAA596C6811
 Struct_MeleeWeapons=
@@ -2698,35 +2700,36 @@ SphereComponent.Shape=True
 StaticMeshComponent.Collision=True
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/UI/HUD/Widgets/WBP_HealthBar
-MRUItem1=/Game/UI/HUD/Widgets/WBP_HUD
-MRUItem2=/Game/Health/Components/BPC_Health
-MRUItem3=/Game/UI/HUD/Widgets/WBP_Spell_Ability
-MRUItem4=/Game/UI/HUD/Widgets/WBP_ChrImage
-MRUItem5=/Game/Combat/Ranged/Projectiles/Structs_Tables/DT_Non-Custom_Spells
-MRUItem6=/Game/Combat/Ranged/Projectiles/BPs/BP_Spell_Projectile
-MRUItem7=/Game/General_Character_Things/Interfaces/BPI_Character
-MRUItem8=/Game/General_Character_Things/Structs_Tables/DT_Character_Info
-MRUItem9=/Game/Player/BPs/BP_ThirdPersonCharacter
-MRUItem10=/Game/Combat/Ranged/Components/BPC_Spells
-MRUItem11=/Game/Modes_Instances/Modes/BP_ThirdPersonGameMode
-MRUItem12=/Game/Combat/Ranged/Projectiles/Structs_Tables/Struct_Spell_Info
-MRUItem13=/Game/Combat/Ranged/Projectiles/Structs_Tables/Struct_Spell_UI_Info
-MRUItem14=/Game/General_Character_Things/Structs_Tables/Struct_Character_Info
-MRUItem15=/Game/Combat/Weapons/Ranged/Structs_Tables/Struct_Ranged_Weapons
-MRUItem16=/Game/Co-op/Camera/BP_Camera
-MRUItem17=/Game/Combat/Weapons/Ranged/Structs_Tables/DT_Ranged_Weapons
-MRUItem18=/Game/Combat/Ranged/Projectiles/Enums/Enum_Spell_Names
-MRUItem19=/Game/Enemies/Structs_Tables/DT_Enemy_Info
-MRUItem20=/Game/Enemies/Structs_Tables/Struct_Enemy_Info
-MRUItem21=/Game/Combat/Ranged/Components/BPC_Ranged_Attack
-MRUItem22=/Game/Combat/Ranged/Projectiles/Components/BPC_Piercing
-MRUItem23=/Game/Enemies/Enums/Enum_Enemies
-MRUItem24=/Game/Enemies/BPs/BP_TestEnemy
-MRUItem25=/Game/Movement/Basic_Movement/Struct_Basic_Movement_Info
-MRUItem26=/Game/Health/Structs_Tables/Struct_Health_Info
-MRUItem27=/Game/General_Character_Things/Enums/Enum_Character_Names
-MRUItem28=/Game/Combat/Ranged/Projectiles/Components/BPC_Split
+MRUItem0=/Game/Combat/Ranged/Projectiles/Structs_Tables/DT_Non-Custom_Spells
+MRUItem1=/Game/Combat/Ranged/Projectiles/Structs_Tables/Struct_Spell_General_Info
+MRUItem2=/Game/Combat/Ranged/Projectiles/BPs/BP_Spell_Projectile
+MRUItem3=/Game/UI/HUD/Widgets/WBP_HealthBar
+MRUItem4=/Game/UI/HUD/Widgets/WBP_HUD
+MRUItem5=/Game/Health/Components/BPC_Health
+MRUItem6=/Game/UI/HUD/Widgets/WBP_Spell_Ability
+MRUItem7=/Game/UI/HUD/Widgets/WBP_ChrImage
+MRUItem8=/Game/General_Character_Things/Interfaces/BPI_Character
+MRUItem9=/Game/General_Character_Things/Structs_Tables/DT_Character_Info
+MRUItem10=/Game/Player/BPs/BP_ThirdPersonCharacter
+MRUItem11=/Game/Combat/Ranged/Components/BPC_Spells
+MRUItem12=/Game/Modes_Instances/Modes/BP_ThirdPersonGameMode
+MRUItem13=/Game/Combat/Ranged/Projectiles/Structs_Tables/Struct_Spell_Info
+MRUItem14=/Game/Combat/Ranged/Projectiles/Structs_Tables/Struct_Spell_UI_Info
+MRUItem15=/Game/General_Character_Things/Structs_Tables/Struct_Character_Info
+MRUItem16=/Game/Combat/Weapons/Ranged/Structs_Tables/Struct_Ranged_Weapons
+MRUItem17=/Game/Co-op/Camera/BP_Camera
+MRUItem18=/Game/Combat/Weapons/Ranged/Structs_Tables/DT_Ranged_Weapons
+MRUItem19=/Game/Combat/Ranged/Projectiles/Enums/Enum_Spell_Names
+MRUItem20=/Game/Enemies/Structs_Tables/DT_Enemy_Info
+MRUItem21=/Game/Enemies/Structs_Tables/Struct_Enemy_Info
+MRUItem22=/Game/Combat/Ranged/Components/BPC_Ranged_Attack
+MRUItem23=/Game/Combat/Ranged/Projectiles/Components/BPC_Piercing
+MRUItem24=/Game/Enemies/Enums/Enum_Enemies
+MRUItem25=/Game/Enemies/BPs/BP_TestEnemy
+MRUItem26=/Game/Movement/Basic_Movement/Struct_Basic_Movement_Info
+MRUItem27=/Game/Health/Structs_Tables/Struct_Health_Info
+MRUItem28=/Game/General_Character_Things/Enums/Enum_Character_Names
+MRUItem29=/Game/Combat/Ranged/Projectiles/Components/BPC_Split
 
 [PlacementMode]
 RecentlyPlaced=/Game/Enemies/BPs/BP_TestEnemy.BP_TestEnemy;
@@ -2790,7 +2793,7 @@ None=======
 /Game/Combat/Ranged/Projectiles/Structs_Tables/Characteristics/Struct_Spell_AOE.Struct_Spell_AOE=1
 /Game/Combat/Ranged/Projectiles/Structs_Tables/Characteristics/Struct_Spell_Split.Struct_Spell_Split=1
 /Game/Combat/Ranged/Projectiles/Structs_Tables/Characteristics/Struct_Spell_Homing.Struct_Spell_Homing=0
-/Game/Combat/Ranged/Projectiles/BPs/BP_Spell_Projectile.BP_Spell_Projectile=1
+/Game/Combat/Ranged/Projectiles/BPs/BP_Spell_Projectile.BP_Spell_Projectile=0
 /Game/Combat/Ranged/Projectiles/Structs_Tables/DT_Non-Custom_Spells.DT_Non-Custom_Spells=0
 /Game/Health/Components/BPC_Health.BPC_Health=0
 /Game/Health/Enums/Enum_Death_Types.Enum_Death_Types=1
