--- a/Reign_of_the_Abyss/Config/DefaultEngine.ini
+++ b/Reign_of_the_Abyss/Config/DefaultEngine.ini
@@ -11,6 +11,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 GlobalDefaultGameMode=/Game/Modes_Instances/Modes/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
 GlobalDefaultServerGameMode=None
 bOffsetPlayerGamepadIds=True
+GameInstanceClass=/Game/Modes_Instances/Instances/BP_Game_Instance.BP_Game_Instance_C
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
